# proof-forge-v2

./: .env.example  .env.prod.example  .gitignore  LICENSE  README.md  conftest.py  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.v2.yml  docker-compose.yml  pytest.ini  skills-lock.json
apps/backend/: Dockerfile  alembic.ini  pyproject.toml
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 0001_initial.py  0002_review_cards.py  0003_user_email_index.py  0004_concept_mastery.py  0005_web_app_tables.py  0006_topic_materials.py  0007_llm_usage_logs.py  0008_ide_evidence_bridge.py  0009_chat_sessions.py  0010_capsule_status.py  0011_topic_cards.py  0012_submission_attachments.py  0013_chat_attachments.py  0014_followup_created_at.py  0015_api_keys.py  0016_topic_folders.py  0017_topic_domain_strategy.py  0018_capsule_title.py
apps/backend/app/: config.py  database.py  main.py
apps/backend/app/models/: __init__.py  agent_context_export.py  api_key.py  auth_token.py  capsule.py  capsule_feedback.py  chat_attachment.py  chat_session.py  code_artifact.py  concept_mastery.py  evaluation.py  ide_session.py  ide_submission.py  learner_profile.py  learning_event.py  llm_usage_log.py  practice_task.py  review_attempt.py  review_card.py  review_question.py  study_session.py  submission_attachment.py  topic.py  (+7 more)
apps/mcp-server/: client.py  mcp_config.json  pyproject.toml  server.py  session.py
apps/mcp-server/tools/: capsule_tools.py  card_tools.py  context_tools.py  event_tools.py  mastery_tools.py  review_tools.py  topic_tools.py  user_tools.py
(+184 files in other folders)
